--- a/fit_RBD.ipynb
+++ b/fit_RBD.ipynb
@@ -171,11 +171,11 @@
     "import polyclonal\n",
     "\n",
     "noisy_data = (\n",
-    "    pd.read_csv('RBD_variants_escape_noisy.csv', na_filter=None)\n",
+    "    pd.read_csv(\"RBD_variants_escape_noisy.csv\", na_filter=None)\n",
     "    .query('library == \"avg2muts\"')\n",
-    "    .query('concentration in [0.25, 1, 4]')\n",
+    "    .query(\"concentration in [0.25, 1, 4]\")\n",
     "    .reset_index(drop=True)\n",
-    "    )\n",
+    ")\n",
     "\n",
     "noisy_data"
    ]
@@ -202,23 +202,26 @@
    },
    "outputs": [],
    "source": [
-    "poly_abs = polyclonal.Polyclonal(data_to_fit=noisy_data,\n",
-    "                                 activity_wt_df=pd.DataFrame.from_records(\n",
-    "                                         [('1', 1.0),\n",
-    "                                          ('2', 3.0),\n",
-    "                                          ('3', 2.0),\n",
-    "                                          ],\n",
-    "                                         columns=['epitope', 'activity'],\n",
-    "                                         ),\n",
-    "                                 site_escape_df=pd.DataFrame.from_records(\n",
-    "                                         [('1', 417, 10.0),\n",
-    "                                          ('2', 484, 10.0),\n",
-    "                                          ('3', 444, 10.0),\n",
-    "                                          ],\n",
-    "                                         columns=['epitope', 'site', 'escape'],\n",
-    "                                         ),\n",
-    "                                 data_mut_escape_overlap='fill_to_data',\n",
-    "                                 )"
+    "poly_abs = polyclonal.Polyclonal(\n",
+    "    data_to_fit=noisy_data,\n",
+    "    activity_wt_df=pd.DataFrame.from_records(\n",
+    "        [\n",
+    "            (\"1\", 1.0),\n",
+    "            (\"2\", 3.0),\n",
+    "            (\"3\", 2.0),\n",
+    "        ],\n",
+    "        columns=[\"epitope\", \"activity\"],\n",
+    "    ),\n",
+    "    site_escape_df=pd.DataFrame.from_records(\n",
+    "        [\n",
+    "            (\"1\", 417, 10.0),\n",
+    "            (\"2\", 484, 10.0),\n",
+    "            (\"3\", 444, 10.0),\n",
+    "        ],\n",
+    "        columns=[\"epitope\", \"site\", \"escape\"],\n",
+    "    ),\n",
+    "    data_mut_escape_overlap=\"fill_to_data\",\n",
+    ")"
    ]
   },
   {
@@ -552,11 +555,11 @@
    "outputs": [],
    "source": [
     "exact_data = (\n",
-    "    pd.read_csv('RBD_variants_escape_exact.csv', na_filter=None)\n",
+    "    pd.read_csv(\"RBD_variants_escape_exact.csv\", na_filter=None)\n",
     "    .query('library == \"avg3muts\"')\n",
-    "    .query('concentration in [0.25, 1, 0.5]')\n",
+    "    .query(\"concentration in [0.25, 1, 0.5]\")\n",
     "    .reset_index(drop=True)\n",
-    "    )"
+    ")"
    ]
   },
   {
@@ -602,30 +605,29 @@
     "max_ic90 = 50\n",
     "\n",
     "# we only need the variants, not the concentration for the IC90 comparison\n",
-    "ic90s = (exact_data[['aa_substitutions', 'IC90']]\n",
-    "         .assign(IC90=lambda x: x['IC90'].clip(upper=max_ic90))\n",
-    "         .drop_duplicates()\n",
-    "         )\n",
-    "\n",
-    "ic90s = poly_abs.icXX(ic90s, x=0.9, col='predicted_IC90', max_c=max_ic90)\n",
-    "\n",
     "ic90s = (\n",
-    "    ic90s\n",
-    "    .assign(log_IC90=lambda x: numpy.log10(x['IC90']),\n",
-    "            predicted_log_IC90=lambda x: numpy.log10(x['predicted_IC90']),\n",
-    "            )\n",
-    "    )\n",
+    "    exact_data[[\"aa_substitutions\", \"IC90\"]]\n",
+    "    .assign(IC90=lambda x: x[\"IC90\"].clip(upper=max_ic90))\n",
+    "    .drop_duplicates()\n",
+    ")\n",
     "\n",
-    "corr = ic90s['log_IC90'].corr(ic90s['predicted_log_IC90']) ** 2\n",
+    "ic90s = poly_abs.icXX(ic90s, x=0.9, col=\"predicted_IC90\", max_c=max_ic90)\n",
+    "\n",
+    "ic90s = ic90s.assign(\n",
+    "    log_IC90=lambda x: numpy.log10(x[\"IC90\"]),\n",
+    "    predicted_log_IC90=lambda x: numpy.log10(x[\"predicted_IC90\"]),\n",
+    ")\n",
+    "\n",
+    "corr = ic90s[\"log_IC90\"].corr(ic90s[\"predicted_log_IC90\"]) ** 2\n",
     "print(f\"Correlation (R^2) is {corr:.2f}\")\n",
     "\n",
     "ic90_corr_plot = (\n",
-    "    ggplot(ic90s) +\n",
-    "    aes('log_IC90', 'predicted_log_IC90') +\n",
-    "    geom_point(alpha=0.1, size=1) +\n",
-    "    theme_classic() +\n",
-    "    theme(figure_size=(3, 3))\n",
-    "    )\n",
+    "    ggplot(ic90s)\n",
+    "    + aes(\"log_IC90\", \"predicted_log_IC90\")\n",
+    "    + geom_point(alpha=0.1, size=1)\n",
+    "    + theme_classic()\n",
+    "    + theme(figure_size=(3, 3))\n",
+    ")\n",
     "\n",
     "_ = ic90_corr_plot.draw()"
    ]
@@ -724,22 +726,22 @@
     "exact_vs_pred = poly_abs.prob_escape(variants_df=exact_data)\n",
     "\n",
     "print(f\"Correlations (R^2) at each concentration:\")\n",
-    "display(exact_vs_pred\n",
-    "        .groupby('concentration')\n",
-    "        .apply(lambda x: x['prob_escape'].corr(x['predicted_prob_escape']) ** 2)\n",
-    "        .rename('correlation (R^2)')\n",
-    "        .reset_index()\n",
-    "        .round(2)\n",
-    "        )\n",
+    "display(\n",
+    "    exact_vs_pred.groupby(\"concentration\")\n",
+    "    .apply(lambda x: x[\"prob_escape\"].corr(x[\"predicted_prob_escape\"]) ** 2)\n",
+    "    .rename(\"correlation (R^2)\")\n",
+    "    .reset_index()\n",
+    "    .round(2)\n",
+    ")\n",
     "\n",
     "pv_corr_plot = (\n",
-    "    ggplot(exact_vs_pred) +\n",
-    "    aes('prob_escape', 'predicted_prob_escape') +\n",
-    "    geom_point(alpha=0.1, size=1) +\n",
-    "    facet_wrap('~ concentration', nrow=1) +\n",
-    "    theme_classic() +\n",
-    "    theme(figure_size=(3 * exact_vs_pred['concentration'].nunique(), 3))\n",
-    "    )\n",
+    "    ggplot(exact_vs_pred)\n",
+    "    + aes(\"prob_escape\", \"predicted_prob_escape\")\n",
+    "    + geom_point(alpha=0.1, size=1)\n",
+    "    + facet_wrap(\"~ concentration\", nrow=1)\n",
+    "    + theme_classic()\n",
+    "    + theme(figure_size=(3 * exact_vs_pred[\"concentration\"].nunique(), 3))\n",
+    ")\n",
     "\n",
     "_ = pv_corr_plot.draw()"
    ]
@@ -901,43 +903,44 @@
     "\n",
     "import altair as alt\n",
     "\n",
-    "mut_escape_pred = (\n",
-    "    pd.read_csv('RBD_mut_escape_df.csv')\n",
-    "    .merge((poly_abs.mut_escape_df\n",
-    "            .assign(epitope=lambda x: 'class ' + x['epitope'].astype(str))\n",
-    "            .rename(columns={'escape': 'predicted escape'})\n",
-    "            ),\n",
-    "           on=['mutation', 'epitope'],\n",
-    "           validate='one_to_one',\n",
-    "           )\n",
-    "    )\n",
+    "mut_escape_pred = pd.read_csv(\"RBD_mut_escape_df.csv\").merge(\n",
+    "    (\n",
+    "        poly_abs.mut_escape_df.assign(\n",
+    "            epitope=lambda x: \"class \" + x[\"epitope\"].astype(str)\n",
+    "        ).rename(columns={\"escape\": \"predicted escape\"})\n",
+    "    ),\n",
+    "    on=[\"mutation\", \"epitope\"],\n",
+    "    validate=\"one_to_one\",\n",
+    ")\n",
     "\n",
-    "print('Correlation (R^2) between predicted and true values:')\n",
-    "corr = (mut_escape_pred\n",
-    "        .groupby('epitope')\n",
-    "        .apply(lambda x: x['escape'].corr(x['predicted escape']) ** 2)\n",
-    "        .rename('correlation (R^2)')\n",
-    "        .reset_index()\n",
-    "        )\n",
+    "print(\"Correlation (R^2) between predicted and true values:\")\n",
+    "corr = (\n",
+    "    mut_escape_pred.groupby(\"epitope\")\n",
+    "    .apply(lambda x: x[\"escape\"].corr(x[\"predicted escape\"]) ** 2)\n",
+    "    .rename(\"correlation (R^2)\")\n",
+    "    .reset_index()\n",
+    ")\n",
     "display(corr.round(2))\n",
     "\n",
     "# for testing since we nbval ignore cell output\n",
-    "numpy.allclose(corr['correlation (R^2)'], numpy.array([0.82, 0.96, 0.93]), atol=0.02)\n",
+    "numpy.allclose(corr[\"correlation (R^2)\"], numpy.array([0.82, 0.96, 0.93]), atol=0.02)\n",
     "\n",
     "corr_chart = (\n",
     "    alt.Chart(mut_escape_pred)\n",
-    "    .encode(x='escape',\n",
-    "            y='predicted escape',\n",
-    "            color='epitope',\n",
-    "            tooltip=['mutation', 'epitope'],\n",
-    "            )\n",
+    "    .encode(\n",
+    "        x=\"escape\",\n",
+    "        y=\"predicted escape\",\n",
+    "        color=\"epitope\",\n",
+    "        tooltip=[\"mutation\", \"epitope\"],\n",
+    "    )\n",
     "    .mark_point(opacity=0.5)\n",
     "    .properties(width=250, height=250)\n",
-    "    .facet(column='epitope')\n",
-    "    .resolve_scale(x='independent',\n",
-    "                   y='independent',\n",
-    "                   )\n",
+    "    .facet(column=\"epitope\")\n",
+    "    .resolve_scale(\n",
+    "        x=\"independent\",\n",
+    "        y=\"independent\",\n",
     "    )\n",
+    ")\n",
     "\n",
     "corr_chart"
    ]
