--- a/library_size.ipynb
+++ b/library_size.ipynb
@@ -200,11 +200,11 @@
    ],
    "source": [
     "noisy_data = (\n",
-    "    pd.read_csv('RBD_variants_escape_noisy.csv', na_filter=None)\n",
+    "    pd.read_csv(\"RBD_variants_escape_noisy.csv\", na_filter=None)\n",
     "    .query(\"library == 'avg3muts'\")\n",
-    "    .query('concentration in [0.25, 1, 4]')\n",
+    "    .query(\"concentration in [0.25, 1, 4]\")\n",
     "    .reset_index(drop=True)\n",
-    "    )\n",
+    ")\n",
     "\n",
     "noisy_data"
    ]
@@ -238,54 +238,61 @@
     "library_sizes = [1000, 2500, 5000, 10000, 20000, 30000]\n",
     "\n",
     "# Make a directory to house pickled models\n",
-    "os.makedirs('fit_polyclonal_models', exist_ok=True)\n",
+    "os.makedirs(\"fit_polyclonal_models\", exist_ok=True)\n",
+    "\n",
     "\n",
     "def fit_polyclonal(n_variants):\n",
     "    \"\"\"\n",
     "    Fit `Polyclonal` model on n_variants variants randomly subsampled from a dataset.\n",
     "    Returns fit `Polyclonal` object.\n",
     "    \"\"\"\n",
-    "    poly_abs = polyclonal.Polyclonal(data_to_fit=(noisy_data.groupby('concentration')\n",
-    "                                                            .apply(lambda x: x.sample(n=n_variants, random_state=123))\n",
-    "                                                            .reset_index(drop = True)),\n",
-    "                                     activity_wt_df=pd.DataFrame.from_records(\n",
-    "                                         [('1', 1.0),\n",
-    "                                          ('2', 3.0),\n",
-    "                                          ('3', 2.0),\n",
-    "                                          ],\n",
-    "                                         columns=['epitope', 'activity'],\n",
-    "                                         ),\n",
-    "                                     site_escape_df=pd.DataFrame.from_records(\n",
-    "                                         [('1', 417, 10.0),\n",
-    "                                          ('2', 484, 10.0),\n",
-    "                                          ('3', 444, 10.0),\n",
-    "                                          ],\n",
-    "                                         columns=['epitope', 'site', 'escape'],\n",
-    "                                         ),\n",
-    "                                     data_mut_escape_overlap='fill_to_data',\n",
-    "                                 )\n",
+    "    poly_abs = polyclonal.Polyclonal(\n",
+    "        data_to_fit=(\n",
+    "            noisy_data.groupby(\"concentration\")\n",
+    "            .apply(lambda x: x.sample(n=n_variants, random_state=123))\n",
+    "            .reset_index(drop=True)\n",
+    "        ),\n",
+    "        activity_wt_df=pd.DataFrame.from_records(\n",
+    "            [\n",
+    "                (\"1\", 1.0),\n",
+    "                (\"2\", 3.0),\n",
+    "                (\"3\", 2.0),\n",
+    "            ],\n",
+    "            columns=[\"epitope\", \"activity\"],\n",
+    "        ),\n",
+    "        site_escape_df=pd.DataFrame.from_records(\n",
+    "            [\n",
+    "                (\"1\", 417, 10.0),\n",
+    "                (\"2\", 484, 10.0),\n",
+    "                (\"3\", 444, 10.0),\n",
+    "            ],\n",
+    "            columns=[\"epitope\", \"site\", \"escape\"],\n",
+    "        ),\n",
+    "        data_mut_escape_overlap=\"fill_to_data\",\n",
+    "    )\n",
     "    poly_abs.fit()\n",
     "    return poly_abs\n",
+    "\n",
     "\n",
     "# Store all fit models in a dictionary for future lookup\n",
     "fit_models = {}\n",
     "\n",
     "for n in library_sizes:\n",
     "    # These are the keys for fit models\n",
-    "    model_string = f'noisy_[0.25, 1, 4]conc_3muts_{n}vars'\n",
+    "    model_string = f\"noisy_[0.25, 1, 4]conc_3muts_{n}vars\"\n",
     "\n",
     "    # If the pickled model exists in fit_polyclonal_models directory,\n",
     "    # load it and update fit_models\n",
-    "    if os.path.exists(f'fit_polyclonal_models/{model_string}.pkl') is True:\n",
-    "        model = pickle.load(open(f'fit_polyclonal_models/{model_string}.pkl', 'rb'))\n",
-    "        fit_models.update({model_string : model})\n",
+    "    if os.path.exists(f\"fit_polyclonal_models/{model_string}.pkl\") is True:\n",
+    "        model = pickle.load(open(f\"fit_polyclonal_models/{model_string}.pkl\", \"rb\"))\n",
+    "        fit_models.update({model_string: model})\n",
     "        print(f\"Model with {n} variants was already fit.\")\n",
     "    else:\n",
     "        # Else, fit a model using fit_polyclonal(), save it to the\n",
     "        # fit_polyclonal_models directory, and update fit_models\n",
     "        model = fit_polyclonal(n)\n",
-    "        fit_models.update({model_string : model})\n",
-    "        pickle.dump(model, open(f'fit_polyclonal_models/{model_string}.pkl', 'wb'))\n",
+    "        fit_models.update({model_string: model})\n",
+    "        pickle.dump(model, open(f\"fit_polyclonal_models/{model_string}.pkl\", \"wb\"))\n",
     "        print(f\"Model with {n} variants fit and saved.\")"
    ]
   },
@@ -302,34 +309,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_corrs = pd.DataFrame({'epitope' : [], \n",
-    "                          'correlation (R^2)' : [], \n",
-    "                          'num_variants' : []})\n",
+    "all_corrs = pd.DataFrame({\"epitope\": [], \"correlation (R^2)\": [], \"num_variants\": []})\n",
     "\n",
     "for n in library_sizes:\n",
-    "    model = fit_models[f'noisy_[0.25, 1, 4]conc_3muts_{n}vars']\n",
+    "    model = fit_models[f\"noisy_[0.25, 1, 4]conc_3muts_{n}vars\"]\n",
     "\n",
-    "    mut_escape_pred = (\n",
-    "        pd.read_csv('RBD_mut_escape_df.csv')\n",
-    "        .merge((model.mut_escape_df\n",
-    "                .assign(epitope=lambda x: 'class ' + x['epitope'].astype(str))\n",
-    "                .rename(columns={'escape': 'predicted escape'})\n",
-    "                ),\n",
-    "               on=['mutation', 'epitope'],\n",
-    "               validate='one_to_one',\n",
-    "               )\n",
-    "        )\n",
+    "    mut_escape_pred = pd.read_csv(\"RBD_mut_escape_df.csv\").merge(\n",
+    "        (\n",
+    "            model.mut_escape_df.assign(\n",
+    "                epitope=lambda x: \"class \" + x[\"epitope\"].astype(str)\n",
+    "            ).rename(columns={\"escape\": \"predicted escape\"})\n",
+    "        ),\n",
+    "        on=[\"mutation\", \"epitope\"],\n",
+    "        validate=\"one_to_one\",\n",
+    "    )\n",
     "\n",
-    "    corr = (mut_escape_pred\n",
-    "            .groupby('epitope')\n",
-    "            .apply(lambda x: x['escape'].corr(x['predicted escape']) ** 2)\n",
-    "            .rename('correlation (R^2)')\n",
-    "            .reset_index()\n",
-    "            )\n",
-    "    \n",
-    "    all_corrs = pd.concat([all_corrs, \n",
-    "                    corr.assign(num_variants = [str(n)]* len(corr.index))\n",
-    "                        ])"
+    "    corr = (\n",
+    "        mut_escape_pred.groupby(\"epitope\")\n",
+    "        .apply(lambda x: x[\"escape\"].corr(x[\"predicted escape\"]) ** 2)\n",
+    "        .rename(\"correlation (R^2)\")\n",
+    "        .reset_index()\n",
+    "    )\n",
+    "\n",
+    "    all_corrs = pd.concat(\n",
+    "        [all_corrs, corr.assign(num_variants=[str(n)] * len(corr.index))]\n",
+    "    )"
    ]
   },
   {
@@ -402,15 +406,23 @@
    ],
    "source": [
     "# NBVAL_IGNORE_OUTPUT\n",
-    "base = alt.Chart(all_corrs).mark_point().encode(\n",
-    "    alt.X('num_variants:Q'),\n",
-    "    alt.Y('correlation (R^2):Q'),\n",
-    "    alt.Color('epitope:N'),\n",
-    "    tooltip=['num_variants', alt.Tooltip('correlation (R^2)', format='.3f'), 'epitope']\n",
+    "base = (\n",
+    "    alt.Chart(all_corrs)\n",
+    "    .mark_point()\n",
+    "    .encode(\n",
+    "        alt.X(\"num_variants:Q\"),\n",
+    "        alt.Y(\"correlation (R^2):Q\"),\n",
+    "        alt.Color(\"epitope:N\"),\n",
+    "        tooltip=[\n",
+    "            \"num_variants\",\n",
+    "            alt.Tooltip(\"correlation (R^2)\", format=\".3f\"),\n",
+    "            \"epitope\",\n",
+    "        ],\n",
+    "    )\n",
     ")\n",
-    "base + base.transform_loess('num_variants', 'correlation (R^2)', groupby=['epitope']\n",
-    "                           ).mark_line(size=2.5\n",
-    "                                      ).properties(title='inferred vs. true mutation escape values')"
+    "base + base.transform_loess(\n",
+    "    \"num_variants\", \"correlation (R^2)\", groupby=[\"epitope\"]\n",
+    ").mark_line(size=2.5).properties(title=\"inferred vs. true mutation escape values\")"
    ]
   },
   {
@@ -427,11 +439,11 @@
    "outputs": [],
    "source": [
     "exact_data = (\n",
-    "    pd.read_csv('RBD_variants_escape_exact.csv', na_filter=None)\n",
+    "    pd.read_csv(\"RBD_variants_escape_exact.csv\", na_filter=None)\n",
     "    .query('library == \"avg4muts\"')\n",
-    "    .query('concentration in [1]')\n",
+    "    .query(\"concentration in [1]\")\n",
     "    .reset_index(drop=True)\n",
-    "    )"
+    ")"
    ]
   },
   {
@@ -447,32 +459,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ic90_corrs = pd.DataFrame({'correlation (R^2)' : [], \n",
-    "                           'num_variants' : []})\n",
+    "ic90_corrs = pd.DataFrame({\"correlation (R^2)\": [], \"num_variants\": []})\n",
     "\n",
     "max_ic90 = 50\n",
     "for n in library_sizes:\n",
-    "    model = fit_models[f'noisy_[0.25, 1, 4]conc_3muts_{n}vars']\n",
-    "    \n",
-    "    ic90s = (exact_data[['aa_substitutions', 'IC90']]\n",
-    "         .assign(IC90=lambda x: x['IC90'].clip(upper=max_ic90))\n",
-    "         .drop_duplicates()\n",
-    "         )\n",
-    "    ic90s = model.filter_variants_by_seen_muts(ic90s)\n",
-    "    ic90s = model.icXX(ic90s, x=0.9, col='predicted_IC90', max_c=max_ic90)\n",
+    "    model = fit_models[f\"noisy_[0.25, 1, 4]conc_3muts_{n}vars\"]\n",
     "\n",
     "    ic90s = (\n",
-    "        ic90s\n",
-    "        .assign(log_IC90=lambda x: np.log10(x['IC90']),\n",
-    "            predicted_log_IC90=lambda x: np.log10(x['predicted_IC90']),\n",
-    "            )\n",
+    "        exact_data[[\"aa_substitutions\", \"IC90\"]]\n",
+    "        .assign(IC90=lambda x: x[\"IC90\"].clip(upper=max_ic90))\n",
+    "        .drop_duplicates()\n",
+    "    )\n",
+    "    ic90s = model.filter_variants_by_seen_muts(ic90s)\n",
+    "    ic90s = model.icXX(ic90s, x=0.9, col=\"predicted_IC90\", max_c=max_ic90)\n",
+    "\n",
+    "    ic90s = ic90s.assign(\n",
+    "        log_IC90=lambda x: np.log10(x[\"IC90\"]),\n",
+    "        predicted_log_IC90=lambda x: np.log10(x[\"predicted_IC90\"]),\n",
     "    )\n",
     "\n",
-    "    corr = ic90s['log_IC90'].corr(ic90s['predicted_log_IC90']) ** 2\n",
-    "    \n",
-    "    ic90_corrs = pd.concat([ic90_corrs,\n",
-    "                    pd.DataFrame({'correlation (R^2)' : corr,\n",
-    "                                  'num_variants' : [str(n)]})])"
+    "    corr = ic90s[\"log_IC90\"].corr(ic90s[\"predicted_log_IC90\"]) ** 2\n",
+    "\n",
+    "    ic90_corrs = pd.concat(\n",
+    "        [\n",
+    "            ic90_corrs,\n",
+    "            pd.DataFrame({\"correlation (R^2)\": corr, \"num_variants\": [str(n)]}),\n",
+    "        ]\n",
+    "    )"
    ]
   },
   {
@@ -545,14 +558,18 @@
    ],
    "source": [
     "# NBVAL_IGNORE_OUTPUT\n",
-    "base = alt.Chart(ic90_corrs).mark_point().encode(\n",
-    "    alt.X('num_variants:Q'),\n",
-    "    alt.Y('correlation (R^2):Q'),\n",
-    "    tooltip=['num_variants', alt.Tooltip('correlation (R^2)', format='.3f')]\n",
+    "base = (\n",
+    "    alt.Chart(ic90_corrs)\n",
+    "    .mark_point()\n",
+    "    .encode(\n",
+    "        alt.X(\"num_variants:Q\"),\n",
+    "        alt.Y(\"correlation (R^2):Q\"),\n",
+    "        tooltip=[\"num_variants\", alt.Tooltip(\"correlation (R^2)\", format=\".3f\")],\n",
+    "    )\n",
     ")\n",
-    "base + base.transform_loess('num_variants', 'correlation (R^2)'\n",
-    "                           ).mark_line(size=2.5\n",
-    "                                      ).properties(title='predicted vs. true IC90')"
+    "base + base.transform_loess(\"num_variants\", \"correlation (R^2)\").mark_line(\n",
+    "    size=2.5\n",
+    ").properties(title=\"predicted vs. true IC90\")"
    ]
   },
   {
