--- a/simulate_RBD.ipynb
+++ b/simulate_RBD.ipynb
@@ -43,13 +43,13 @@
     "import polyclonal\n",
     "\n",
     "# read data needed to initialize `Polyclonal` object\n",
-    "activity_wt_df = pd.read_csv('RBD_activity_wt_df.csv')\n",
-    "mut_escape_df = pd.read_csv('RBD_mut_escape_df.csv')\n",
+    "activity_wt_df = pd.read_csv(\"RBD_activity_wt_df.csv\")\n",
+    "mut_escape_df = pd.read_csv(\"RBD_mut_escape_df.csv\")\n",
     "\n",
     "# create `Polyclonal` object with actual antibody mix\n",
     "poly_abs = polyclonal.Polyclonal(\n",
-    "                    activity_wt_df=activity_wt_df,\n",
-    "                    mut_escape_df=mut_escape_df)\n",
+    "    activity_wt_df=activity_wt_df, mut_escape_df=mut_escape_df\n",
+    ")\n",
     "\n",
     "print(f\"Epitopes: {poly_abs.epitopes}\")\n",
     "print(f\"Number of mutations: {len(poly_abs.mutations)}\")\n",
@@ -97,20 +97,19 @@
     "\n",
     "# read coding sequence, then slice to just region of interest\n",
     "# noting that RBD starts at residue 331\n",
-    "geneseq = str(Bio.SeqIO.read('RBD_seq.fasta', 'fasta').seq)\n",
+    "geneseq = str(Bio.SeqIO.read(\"RBD_seq.fasta\", \"fasta\").seq)\n",
     "\n",
-    "allowed_aa_muts = poly_abs.mut_escape_df['mutation'].unique()\n",
+    "allowed_aa_muts = poly_abs.mut_escape_df[\"mutation\"].unique()\n",
     "print(f\"There are {len(allowed_aa_muts)} allowed amino-acid mutations.\")\n",
     "\n",
     "variants = dms_variants.simulate.simulate_CodonVariantTable(\n",
-    "                        geneseq=geneseq,\n",
-    "                        bclen=16,\n",
-    "                        library_specs={f\"avg{m}muts\": {'avgmuts': m,\n",
-    "                                                       'nvariants': 30000}\n",
-    "                                       for m in [1, 2, 3, 4]},\n",
-    "                        allowed_aa_muts=[polyclonal.utils.shift_mut_site(m, -330)\n",
-    "                                         for m in allowed_aa_muts],\n",
-    "                        )"
+    "    geneseq=geneseq,\n",
+    "    bclen=16,\n",
+    "    library_specs={\n",
+    "        f\"avg{m}muts\": {\"avgmuts\": m, \"nvariants\": 30000} for m in [1, 2, 3, 4]\n",
+    "    },\n",
+    "    allowed_aa_muts=[polyclonal.utils.shift_mut_site(m, -330) for m in allowed_aa_muts],\n",
+    ")"
    ]
   },
   {
@@ -147,8 +146,9 @@
     }
    ],
    "source": [
-    "p = variants.plotNumMutsHistogram(mut_type='aa', samples=None,\n",
-    "                                  libraries=variants.libraries)\n",
+    "p = variants.plotNumMutsHistogram(\n",
+    "    mut_type=\"aa\", samples=None, libraries=variants.libraries\n",
+    ")\n",
     "_ = p.draw()"
    ]
   },
@@ -187,8 +187,9 @@
     }
    ],
    "source": [
-    "p = variants.plotMutFreqs(variant_type='all', mut_type='aa',\n",
-    "                          samples=None, libraries=variants.libraries)\n",
+    "p = variants.plotMutFreqs(\n",
+    "    variant_type=\"all\", mut_type=\"aa\", samples=None, libraries=variants.libraries\n",
+    ")\n",
     "_ = p.draw()"
    ]
   },
@@ -359,13 +360,13 @@
     }
    ],
    "source": [
-    "variants_df = (\n",
-    "    variants.barcode_variant_df\n",
-    "    [['library', 'barcode', 'aa_substitutions', 'n_aa_substitutions']]\n",
-    "    .assign(aa_substitutions=lambda x: x['aa_substitutions'].apply(\n",
-    "                                polyclonal.utils.shift_mut_site, shift=330)\n",
-    "            )\n",
+    "variants_df = variants.barcode_variant_df[\n",
+    "    [\"library\", \"barcode\", \"aa_substitutions\", \"n_aa_substitutions\"]\n",
+    "].assign(\n",
+    "    aa_substitutions=lambda x: x[\"aa_substitutions\"].apply(\n",
+    "        polyclonal.utils.shift_mut_site, shift=330\n",
     "    )\n",
+    ")\n",
     "\n",
     "variants_df"
    ]
@@ -563,12 +564,12 @@
    ],
    "source": [
     "variants_escape = poly_abs.prob_escape(\n",
-    "                    variants_df=variants_df,\n",
-    "                    concentrations=[0.125, 0.25, 0.5, 1, 2, 4])\n",
+    "    variants_df=variants_df, concentrations=[0.125, 0.25, 0.5, 1, 2, 4]\n",
+    ")\n",
     "\n",
-    "variants_escape = (variants_escape\n",
-    "                   .rename(columns={'predicted_prob_escape': 'prob_escape'})\n",
-    "                   )\n",
+    "variants_escape = variants_escape.rename(\n",
+    "    columns={\"predicted_prob_escape\": \"prob_escape\"}\n",
+    ")\n",
     "\n",
     "variants_escape"
    ]
@@ -609,18 +610,21 @@
    "source": [
     "from plotnine import *\n",
     "\n",
-    "p = (ggplot(variants_escape\n",
-    "            .assign(n_aa_substitutions=lambda x: x['n_aa_substitutions'].map(\n",
-    "                                            lambda n: str(n) if n <= 6 else '>6'),\n",
-    "                    concentration=lambda x: pd.Categorical(x['concentration'])\n",
-    "                    )\n",
-    "            ) +\n",
-    "     aes('n_aa_substitutions', 'prob_escape', fill='concentration') +\n",
-    "     geom_boxplot(outlier_size=0.5, outlier_alpha=0.1) +\n",
-    "     facet_wrap('~ library', ncol=1) +\n",
-    "     theme_classic() +\n",
-    "     theme(figure_size=(9, 7)) \n",
-    "     )\n",
+    "p = (\n",
+    "    ggplot(\n",
+    "        variants_escape.assign(\n",
+    "            n_aa_substitutions=lambda x: x[\"n_aa_substitutions\"].map(\n",
+    "                lambda n: str(n) if n <= 6 else \">6\"\n",
+    "            ),\n",
+    "            concentration=lambda x: pd.Categorical(x[\"concentration\"]),\n",
+    "        )\n",
+    "    )\n",
+    "    + aes(\"n_aa_substitutions\", \"prob_escape\", fill=\"concentration\")\n",
+    "    + geom_boxplot(outlier_size=0.5, outlier_alpha=0.1)\n",
+    "    + facet_wrap(\"~ library\", ncol=1)\n",
+    "    + theme_classic()\n",
+    "    + theme(figure_size=(9, 7))\n",
+    ")\n",
     "\n",
     "_ = p.draw()"
    ]
@@ -816,10 +820,11 @@
     }
    ],
    "source": [
-    "(variants_escape\n",
-    " .groupby(['library', 'concentration'])\n",
-    " .aggregate({'prob_escape': 'mean'})\n",
-    " )"
+    "(\n",
+    "    variants_escape.groupby([\"library\", \"concentration\"]).aggregate(\n",
+    "        {\"prob_escape\": \"mean\"}\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -985,38 +990,36 @@
     "\n",
     "numpy.random.seed(1)  # seed for reproducible output\n",
     "\n",
+    "\n",
     "def add_subtract_mutation(subs):\n",
     "    \"\"\"Sometimes add or subtract a mutation.\"\"\"\n",
     "    subs = subs.split()\n",
-    "    sub_sites = [int(sub[1: -1]) for sub in subs]\n",
+    "    sub_sites = [int(sub[1:-1]) for sub in subs]\n",
     "    rand = numpy.random.random()\n",
     "    if rand < 0.01:  # add mutation with 1% probability\n",
     "        mut = numpy.random.choice(poly_abs.mutations)\n",
-    "        while int(mut[1: -1]) in sub_sites:\n",
+    "        while int(mut[1:-1]) in sub_sites:\n",
     "            mut = numpy.random.choice(poly_abs.mutations)\n",
     "        subs.append(mut)\n",
     "    elif rand > 0.99 and subs:  # subtract mutation with 1% probability\n",
     "        subs.pop(numpy.random.randint(len(subs)))\n",
-    "    return ' '.join(subs)\n",
+    "    return \" \".join(subs)\n",
+    "\n",
     "\n",
     "# only keep needed columns in variants_escape\n",
-    "variants_escape = (\n",
-    "    variants_escape\n",
-    "    [['library', 'aa_substitutions', 'concentration', 'prob_escape']]\n",
-    "    )\n",
+    "variants_escape = variants_escape[\n",
+    "    [\"library\", \"aa_substitutions\", \"concentration\", \"prob_escape\"]\n",
+    "]\n",
     "\n",
     "# simulate noisy variants\n",
-    "noisy_variants_escape = (\n",
-    "    variants_escape\n",
-    "    .assign(\n",
-    "        # add Gaussian noise with standard deviation of 0.05\n",
-    "        prob_escape=lambda x: (x['prob_escape'] +\n",
-    "                               numpy.random.normal(scale=0.05, size=len(x))\n",
-    "                               ).clip(lower=0, upper=1),\n",
-    "        # add rare sequencing errors to variants\n",
-    "        aa_substitutions=lambda x: x['aa_substitutions'].map(add_subtract_mutation),\n",
-    "        )\n",
-    "    )\n",
+    "noisy_variants_escape = variants_escape.assign(\n",
+    "    # add Gaussian noise with standard deviation of 0.05\n",
+    "    prob_escape=lambda x: (\n",
+    "        x[\"prob_escape\"] + numpy.random.normal(scale=0.05, size=len(x))\n",
+    "    ).clip(lower=0, upper=1),\n",
+    "    # add rare sequencing errors to variants\n",
+    "    aa_substitutions=lambda x: x[\"aa_substitutions\"].map(add_subtract_mutation),\n",
+    ")\n",
     "\n",
     "noisy_variants_escape"
    ]
@@ -1187,9 +1190,9 @@
     }
    ],
    "source": [
-    "variants_escape = poly_abs.icXX(variants_escape, x=0.9, col='IC90')\n",
+    "variants_escape = poly_abs.icXX(variants_escape, x=0.9, col=\"IC90\")\n",
     "\n",
-    "noisy_variants_escape = poly_abs.icXX(noisy_variants_escape, x=0.9, col='IC90')\n",
+    "noisy_variants_escape = poly_abs.icXX(noisy_variants_escape, x=0.9, col=\"IC90\")\n",
     "\n",
     "noisy_variants_escape"
    ]
@@ -1221,11 +1224,13 @@
    },
    "outputs": [],
    "source": [
-    "variants_escape.to_csv('RBD_variants_escape_exact.csv',\n",
-    "                       index=False, float_format='%.4g')\n",
+    "variants_escape.to_csv(\n",
+    "    \"RBD_variants_escape_exact.csv\", index=False, float_format=\"%.4g\"\n",
+    ")\n",
     "\n",
-    "noisy_variants_escape.to_csv('RBD_variants_escape_noisy.csv',\n",
-    "                             index=False, float_format='%.4g')"
+    "noisy_variants_escape.to_csv(\n",
+    "    \"RBD_variants_escape_noisy.csv\", index=False, float_format=\"%.4g\"\n",
+    ")"
    ]
   }
  ],
